objects/EOS_Project_Tasks__mdt.object
<CustomObject>
    <description>Task metadata for EOS</description>
    <fields>
        <fullName>Chatter_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chatter Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chatter_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chatter Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Mention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Mention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IA_Mention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IA Mention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Message__c</fullName>
        <label>Notification_Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCS_Mention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PCS Mention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_Mention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PS Mention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Rollback_from_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To prevent if task is in status completed, not moved back to any other status</description>
        <label>Prevent Rollback from Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Task_Name__c</fullName>
        <label>Project Task Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_Mention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QC Mention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RM_Mention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RM Mention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requirement_Code__c</fullName>
        <label>Requirement Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_Mention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TS Mention</label>
        <type>Checkbox</type>
    </fields>
    <label>EOS Project Tasks</label>
    <listViews>
        <fullName>All_Tasks</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Chatter_Post__c</columns>
        <columns>Project_Task_Name__c</columns>
        <columns>Requirement_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Tasks</label>
    </listViews>
    <pluralLabel>EOS Project Tasks</pluralLabel>
</CustomObject>